--- a/src/cover/style.css
+++ b/src/cover/style.css
@@ -1,5 +1,9 @@
+html{
+  overflow: hidden;
+}
 body {
-  background-image:url("http://pic1.win4000.com/wallpaper/2/598a6d6019ef8.jpg");  
+  background-image:url("https://img0.baidu.com/it/u=864592538,1528972971&fm=253&fmt=auto&app=120&f=JPEG?w=1422&h=800");  
+  background-size:cover;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
@@ -7,31 +11,34 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f2f2f2;
 }
-
-.game-cover {
+canvas{
+  max-width:100%;
+  height:auto;
+  filter:blur(1px);
+}
+.container{
   position:fixed;
-  width:80%;
-  height:80%;
-  background-image:url("https://img0.baidu.com/it/u=864592538,1528972971&fm=253&fmt=auto&app=120&f=JPEG?w=1422&h=800");
-  background-size:cover;
+  top:10%;
+  width:60%;
+  height:40%;
+  background-color:azure;
+  opacity:0.4;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 50px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
-
 h1 {
-  font-size: 90px;
+  font-size: 100px;
   font-family:'STXingkai';
-  color:#fff;
+  color:#0a0000;
   margin-top: 10px;
 }
 
 p {
   font-size: 18px;
-  color: #cfbfbf;
+  color: #fcfcfc;
   margin-bottom: 20px;
 }
 
@@ -46,6 +53,7 @@ p {
 button {
   padding: 30px 50px;
   font-size: 25px;
+  font-weight:bolder;
   font-family:楷体;
   background-color: #3498db;
   color: #fff;
@@ -56,7 +64,7 @@ button {
 }
 
 button:hover {
-  background-color: #2980b9;
+  background-color: #53a3d8;
 }
 
 
