--- a/src/cover/style.css
+++ b/src/cover/style.css
@@ -66,5 +66,9 @@ button {
 button:hover {
   background-color: #53a3d8;
 }
-
+.music-player {
+  background-image:url("../Rebellion/Rebellion/images/music.jpg");
+  background-size:100% 100%;
+  border-radius:3rem;
+}
 
